--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -14,5 +14,6 @@
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-dialogs-0.0.4.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
