--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -4,16 +4,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/postgresql-9.1-903.jdbc4.jar"/>
+	<classpathentry kind="lib" path="libs/javafx-dialogs-0.0.4.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink 2.5.0 - Kepler">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate-JPA-2.1">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL_Driver">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/javafx-dialogs-0.0.4.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
