--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -10,10 +10,11 @@
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL_Driver">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate-JPA-2.1">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/sqlite-jdbc-3.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
