--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate-JPA-2.1">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL_Driver">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
