--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -18,11 +18,20 @@
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
+		<accessrules>
+			<accessrule kind="accessible" pattern="javafx/**"/>
+		</accessrules>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink 2.5.1">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink">
 		<attributes>
-			<attribute name="owner.project.facets" value="#system#;jpt.jpa"/>
+			<attribute name="owner.project.facets" value="jpt.jpa;#system#"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/com.sun.tools.xjc_2.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/com.sun.xml.bind_2.2.0.v201004141950.jar"/>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/javax.activation_1.1.0.v201108011116.jar"/>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/javax.mail_1.4.0.v201005080615.jar"/>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/javax.xml.bind_2.2.0.v201105210648.jar"/>
+	<classpathentry kind="lib" path="C:/ProgramData/JavaLibs/eclipselink-2.5.1/jlib/moxy/javax.xml.stream_1.0.1.v201004272200.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
