--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -23,6 +23,7 @@
 			<accessrule kind="accessible" pattern="javafx/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/EclipseLink/jlib/eclipselink.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
