--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="libs/postgresql-9.1-903.jdbc4.jar"/>
-	<classpathentry kind="lib" path="libs/jxl.jar"/>
-	<classpathentry kind="lib" path="libs/testFx-3.1.2.jar" sourcepath="libs/testFx-3.1.2-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/EdiListFX/libs/testFx-3.1.2-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="libs/mysql/mysql-connector-java-5.1.28-bin.jar"/>
 	<classpathentry kind="lib" path="libs/controlsfx-8.0.6_20/controlsfx-8.0.6_20.jar"/>
 	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-api-2.0.2.jar"/>
 	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-core-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/miscellaneous/jxl.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ExcelAPI"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
