--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -6,18 +6,20 @@
 	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-api-2.0.2.jar"/>
 	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-core-2.0.2.jar"/>
 	<classpathentry kind="lib" path="libs/miscellaneous/jxl.jar"/>
-	<classpathentry kind="lib" path="libs/miscellaneous/postgresql-9.1-903.jdbc4.jar"/>
 	<classpathentry kind="lib" path="libs/svnkit/lib/svnkit-1.8.5.jar"/>
+	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-jcl-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-jmx-gui-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-nosql-2.0.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink">
+		<attributes>
+			<attribute name="owner.project.facets" value="jpt.jpa;#system#"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="libs/miscellaneous/postgresql-9.1-903.jdbc4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ExcelAPI"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/poi-3.10.1/poi-ooxml-schemas-3.10.1-20140818.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLinkEdiList">
-		<attributes>
-			<attribute name="owner.project.facets" value="jpt.jpa"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
