--- a/EdiListFX/.classpath
+++ b/EdiListFX/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="libs/logging/apache-log4j-2.0.2-bin/log4j-nosql-2.0.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink">
 		<attributes>
-			<attribute name="owner.project.facets" value="jpt.jpa;#system#"/>
+			<attribute name="owner.project.facets" value="#system#;jpt.jpa"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
